Added AsyncTasks & Loader. Main page layout changed. And, fixed ArrayList Type Casting issue. Cleaned the project.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SearchBooks</string>
+    <string name="search_books_here">Search books here...</string>
+    <string name="search_button_text">search</string>
 </resources>
