1. Changed getJSONArray to optJSONArray such that it handles the empty data. 2. Similarly, added if jsonObject.has("items") to handle in different instance, though outcome is same as step 1. 3. Added some constants for Timeout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">SearchBooks</string>
     <string name="search_books_here">Search books here...</string>
     <string name="search_button_text">search</string>
+    <string name="no_internet_connection">No Internet Connection!</string>
+    <string name="no_book_message">No such book.</string>
 </resources>
